article page view, admin page started

--- a/frontend/scss/partial/_header.scss
+++ b/frontend/scss/partial/_header.scss
@@ -9,6 +9,7 @@ header {
   padding: 10px 30px;
   justify-content: space-between;
   align-items: center;
+  font-family: "Comic Sans MS";
   .header-title {
     font-size: 25px;
     color: #dde97f;
