--- a/frontend/css/admin.css
+++ b/frontend/css/admin.css
@@ -46,8 +46,6 @@ header .header-menu {
 
 * {
   margin: 0;
-  background-color: transparent;
-  border: none;
 }
 
 body {
@@ -95,12 +93,4 @@ body .content .articles-con .article .side-article-con {
   display: flex;
   gap: 55px;
   justify-content: space-around;
-}
-body .content .articles-con .article .side-article-con .action-text {
-  color: rgba(0, 0, 0, 0.5019607843);
-  font-family: "Comic Sans MS";
-  font-size: 20px;
-}
-body .content .articles-con .article .side-article-con .action-text:hover {
-  color: #000000;
-}/*# sourceMappingURL=articles.css.map */
+}/*# sourceMappingURL=admin.css.map */
