--- a/frontend/scss/partial/_overlay.scss
+++ b/frontend/scss/partial/_overlay.scss
@@ -6,13 +6,13 @@
   height: 100vh;
   z-index: 1001;
   background-color: rgba(0, 0, 0, 0.3);
-  display: grid;
+  display: none;
   place-items: center;
   font-family: "Comic Sans MS";
 
-  .add-article-con {
+  .add-article-con, .update-article-con {
     position: relative;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     width: 720px;
