--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -189,59 +189,66 @@ body .content .title {
   padding: 10px 90px;
   font-size: 40px;
 }
-body .content .articles-con {
-  box-sizing: border-box;
-  background-color: #ffbcc2;
-  border-radius: 19px;
-  padding: 35px;
-  font-size: 40px;
+body .content .login-con {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 720px;
+  background-color: #d38e95;
+  border-radius: 11px;
+  padding: 50px 50px 25px 50px;
+}
+body .content .login-con .article {
+  position: relative;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  width: 720px;
+  background-color: #d38e95;
+  border-radius: 11px;
+  padding: 50px 50px 25px 50px;
+}
+body .content form {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  align-items: center;
   width: 100%;
-  gap: 18px;
 }
-body .content .articles-con .article {
-  font-size: 20px;
-  display: flex;
-  justify-content: space-between;
-  padding: 12px 30px;
-  background-color: #ffb06b;
-  border-radius: 12px;
-  margin-bottom: 18px;
-}
-body .content .articles-con .article .side-article-con {
-  display: flex;
-  gap: 55px;
-  justify-content: space-around;
-}
-body .content .articles-con .article .side-article-con .date {
-  display: none;
-}
-body .content .articles-con .article .side-article-con .action-text {
-  display: none;
-  color: rgba(0, 0, 0, 0.5019607843);
+body .content form .field {
   font-family: "Comic Sans MS";
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 20px;
+  background-color: #ffbcc2;
+  padding: 36px 28px;
   font-size: 20px;
 }
-body .content .articles-con .article .side-article-con .action-text:hover {
-  color: #000000;
+body .content form .field::-moz-placeholder {
+  color: #9f6464;
+  font-weight: normal;
 }
-body .content .add-btn {
-  position: absolute;
-  top: 0;
-  left: calc(100% + 15px);
-  text-decoration: none;
+body .content form .field::placeholder {
+  color: #9f6464;
+  font-weight: normal;
+}
+body .content form .field:focus {
+  outline: 3px solid #ff9696;
+}
+body .content form textarea.field {
+  border-bottom-right-radius: 0;
+  height: 400px;
+}
+body .content form input[type=submit] {
+  display: block;
   box-sizing: border-box;
   background-color: #8ade7a;
   color: white;
   font-size: 30px;
-  width: 200px;
-  box-sizing: border-box;
-  padding: 25px;
+  padding: 10px 30px;
   text-align: center;
   border: none;
   border-radius: 50px;
   font-family: "JetBrains Mono";
-}
-body .content .add-btn:hover {
-  background-color: rgb(141, 224, 125);
-  outline: 3px solid #d38e95;
-}/*# sourceMappingURL=admin.css.map */
+}/*# sourceMappingURL=login.css.map */
